完善craft remainder和item updater